--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,11 @@
 name = "audiobook-split-ffmpeg-rs"
 version = "0.1.0"
 edition = "2021"
+authors = ["Markus H (MawKKe) <markus@mawkke.fi>"]
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+clap = { version = "4.4.0", features = ["derive"] }
+serde = {version = "1.0", features = ["derive"]}
+serde_json = "1.0"
