--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,6 @@ authors = ["Markus H (MawKKe) <markus@mawkke.fi>"]
 
 [dependencies]
 clap = { version = "4.4.0", features = ["derive"] }
+path-clean = "1.0.1"
 serde = {version = "1.0", features = ["derive"]}
 serde_json = "1.0"
